[package]
name = "flutter_rust_windows_embedder"
version = "1.1.1"
edition = "2024"


[lib]
name = "flutter_rust_windows_embedder"
crate-type = ["rlib"] 

# [[bin]]
# name = "flutter_rust_windows_embedder"
# path = "src/main.rs"

[features]
regenerate-bindings = ["bindgen"]
engine-tests = ["dep:reqwest", "dep:zip"]

[lints.clippy]
absolute_paths = "deny"

[dependencies]
lazy_static = "1.5.0"
anyhow = "1.0"
goblin = "0.7"
libloading = "0.7"
log         = "0.4"  
env_logger  = "0.10"
gag = "1.0.0"
byteorder = "1.5.0"
serde_json = "1.0"
parking_lot = "0.12.4"
directx_math = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
gl = "0.14"


winapi = { version = "0.3.9", features = ["minwindef", "dbghelp"] }
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_OpenGL",
    "Win32_Security",
    "Win32_Graphics_Direct3D10"

] }
once_cell = "1.20.2"

[dev-dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Memory"] }

[build-dependencies]
bindgen = { version = "0.71.1", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
zip = { version = "0.6", optional = true }

[package.metadata]
# engine-tests pulls the matching Flutter SDK + builds the test_app bundle in build.rs.
